<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/permission"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="10.0dip"
        android:text="@string/permission"
        android:textColor="#ff000000"
        android:textSize="18.0sp" />

    <TextView
        android:id="@+id/permission_des"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="10.0dip"
        android:text="@string/permission_des"
        android:textColor="#ff000000"
        android:textSize="15.0sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="20.0dip"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30.0dip"
            android:layout_height="30.0dip"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/camera_prtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="10.0dip"
            android:text="@string/camera"
            android:textColor="#ff000000"
            android:textSize="15.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30.0dip"
            android:layout_height="30.0dip"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/storage_prtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="3.0dip"
            android:layout_marginRight="10.0dip"
            android:text="@string/storage"
            android:textColor="#ff000000"
            android:textSize="15.0sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/permission_des1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="20.0dip"
        android:text="@string/permission_des1"
        android:textColor="#ff000000"
        android:textSize="12.0sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="20.0dip">

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#00000000"
            android:text="@string/ok"
            android:textColor="#ff009183"
            android:textSize="18.0sp" />

        <Button
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5.0dip"
            android:layout_toLeftOf="@+id/ok"
            android:background="#00000000"
            android:text="@string/settings"
            android:textColor="#ff009183"
            android:textSize="18.0sp"
            android:visibility="invisible" />
    </RelativeLayout>
</LinearLayout>